# unicorn

./: .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apps/macos/unicorn/: Info.plist  InputController.swift  unicorn-Bridging-Header.h
apps/macos/unicorn.xcodeproj/: project.pbxproj
crates/adapter-uniffi/: Cargo.toml
crates/adapter-uniffi/src/: engine.rs  error.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  lib.rs
docs/: SPECIFICATION.md
